--- a/ElevenNote.WebMVC/Views/Note/Index.cshtml
+++ b/ElevenNote.WebMVC/Views/Note/Index.cshtml
@@ -67,6 +67,7 @@
                 .click(function (e) {
                     var target = $(e.target);
                     var noteId = target.attr("data-id");
+                    var starSet = target.hasClass("glyphicon-star");
 
                     $.ajax({
                         method: starSet ? "DELETE" : "PUT",
@@ -75,14 +76,14 @@
                     })
                         .done(function (r) {
                             target.removeClass();
-                            target.addClass("glyphicon" + (starSet ? "glyphicon-star-empt"))
+                            target.addClass("glyphicon" + (starSet ? "glyphicon-star-empty" : "glyphicon-star"));
                         })
                         .fail(function (r) {
                             alert("Failed to change to star status");
                         });
-
-
                 });
         });
-        </script>}
+        </script>
+        }
+
 
